# sound_action

./: README.md
catkin_ws/: nano.save
catkin_ws/devel/lib/pkgconfig/: robot_control.pc
catkin_ws/devel/share/robot_control/cmake/: robot_controlConfig.cmake
catkin_ws/src/robot_control/launch/: robot_control.launch
catkin_ws/src/robot_control/scripts/: controller.py  receiver.py
launch/: answers.py  control_voice.py  controller.py  falldown_detection.py  gesture_control.py  hand_gesture.py  hobot_audio_node.py  transfer.py
launch_2/: temputer.py
src/hand_gesture_detection-develop/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
src/hand_gesture_detection-develop/config/Rdkultra/: gestureDet_8x21.hbm
src/hand_gesture_detection-develop/config/x3/: gestureDet_8x21.hbm
src/hand_gesture_detection-develop/config/x5/: gestureDet_8x21.hbm
src/hand_gesture_detection-develop/include/: gesture_data.h  gesture_postprocess.h  gesture_postprocess_util.h  gesture_preprocess.h  hand_gesture_det_node.h  lmks_process.h
src/hand_gesture_detection-develop/launch/: hand_gesture_detection.launch.py
src/hand_gesture_detection-develop/src/: gesture_postprocess.cpp  gesture_postprocess_util.cc  gesture_preprocess.cpp  hand_gesture_det_node.cpp  lmks_process.cpp  main.cpp
src/hobot_audio-develop/: CHANGELOG.md  README.md  README_cn.md  package.xml
src/hobot_audio-develop/config/: audio_config.json
src/hobot_audio-develop/include/horizon_speech_sdk/hrsc/: cmd_word.json  hrsc_config.cfg
src/hobot_audio-develop/include/horizon_speech_sdk/include/horizonspeechsdk/: hrsc_sdk.h
src/hobot_audio-develop/launch/: hobot_audio.launch.py
src/hobot_audio-develop/src/: audio_example.cpp
src/hobot_audio-develop/src/audio_capture/: hb_audio_capture.cpp
src/hobot_audio-develop/src/audio_engine/: audioengine.cpp
